# CANlogger

./: .dockerignore  .gitignore  CANdatabase_Integration.txt  Dockerfile  README.md  SimplyPut.txt  docker-compose.yml  install.sh  start.sh  stop.sh
.github/workflows/: release-bundle.yml
backend/: capture_service.py  config.py  diagnostics.py  geekom_uploader.py  main.py  models.py  picoscope_driver.py  pyproject.toml  simulator.py  storage.py
config/: default.yaml
frontend/: app.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  styles.css
frontend/src/: App.svelte  app.css
scripts/: 99-picoscope.rules  build_release_bundle.sh  init_db.sql  start_headless.sh  stream_monitor.sh
systemd/: canlogger.service
